--- a/scr/game.html
+++ b/scr/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Chess vs AI</title>
-  <link rel="stylesheet" href="/static/chessboard-1.0.0.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='chessboard-1.0.0.css') }}" />
   <style>
     body {
       font-family: sans-serif;
@@ -25,12 +25,13 @@
   <div id="board"></div>
   <button id="saveBtn">保存游戏</button>
 
-  <!-- 引入库（不再包括 jQuery） -->
-  <script src="/static/chessboard-1.0.0.js"></script>
+  <!-- 引入库 -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="{{ url_for('static', filename='chessboard-1.0.0.js') }}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/stockfish@11.0.0/src/stockfish.js"></script>
 
-  <!-- 引入自定义游戏逻辑 -->
-  <script src="/static/script.js"></script>
+  <!-- 自定义逻辑 -->
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
